--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
+    "victory-native": "^41.17.3",
     "yup": "^1.6.1"
   },
   "devDependencies": {
