create amazing logo

--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "customer",
-    "slug": "customer",
+    "name": "Power Flow",
+    "slug": "Power Flow",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/powerFlow-logo-white.png",
-    "scheme": "customer",
+    "icon": "./assets/images/app-icon/icon.png",
+    "scheme": "Power Flow",
     "userInterfaceStyle": "automatic",
 
     "newArchEnabled": true,
